syntax = "proto3";
package milvus.proto.master;

option go_package="github.com/zilliztech/milvus-distributed/internal/proto/masterpb";

import "common.proto";
import "milvus.proto";
import "internal.proto";
import "data_service.proto";

message IDRequest {
    common.MsgBase base = 1;
    uint32 count = 2;
}

message IDResponse {
    common.Status status = 1;
    int64 ID = 2;
    uint32 count = 3;
}

message TsoRequest {
    common.MsgBase base = 1;
    uint32 count = 3;
}

message TsoResponse {
    common.Status status = 1;
    uint64 timestamp = 2;
    uint32 count = 3;
}

service MasterService {
    /**
     * @brief This method is used to create collection
     *
     * @param CreateCollectionRequest, use to provide collection information to be created.
     *
     * @return Status
     */
    rpc CreateCollection(milvus.CreateCollectionRequest) returns (common.Status){}
    
    /**
     * @brief This method is used to delete collection.
     *
     * @param DropCollectionRequest, collection name is going to be deleted.
     *
     * @return Status
     */
    rpc DropCollection(milvus.DropCollectionRequest) returns (common.Status) {}

    /**
     * @brief This method is used to test collection existence.
     *
     * @param HasCollectionRequest, collection name is going to be tested.
     *
     * @return BoolResponse
     */
    rpc HasCollection(milvus.HasCollectionRequest) returns (milvus.BoolResponse) {}

    /**
     * @brief This method is used to get collection schema.
     *
     * @param DescribeCollectionRequest, target collection name.
     *
     * @return CollectionSchema
     */
    rpc DescribeCollection(milvus.DescribeCollectionRequest) returns (milvus.DescribeCollectionResponse) {}

    rpc GetCollectionStatistics(milvus.CollectionStatsRequest) returns (milvus.CollectionStatsResponse) {}

    /**
     * @brief This method is used to list all collections.
     *
     * @return StringListResponse, collection name list
     */
    rpc ShowCollections(milvus.ShowCollectionRequest) returns (milvus.ShowCollectionResponse) {}

    /**
     * @brief This method is used to create partition
     *
     * @return Status
     */
    rpc CreatePartition(milvus.CreatePartitionRequest) returns (common.Status) {}

    /**
     * @brief This method is used to drop partition
     *
     * @return Status
     */
    rpc DropPartition(milvus.DropPartitionRequest) returns (common.Status) {}

    /**
     * @brief This method is used to test partition existence.
     *
     * @return BoolResponse
     */
    rpc HasPartition(milvus.HasPartitionRequest) returns (milvus.BoolResponse) {}

    rpc GetPartitionStatistics(milvus.PartitionStatsRequest) returns (milvus.PartitionStatsResponse) {}

    /**
     * @brief This method is used to show partition information
     *
     * @param ShowPartitionRequest, target collection name.
     *
     * @return StringListResponse
     */
    rpc ShowPartitions(milvus.ShowPartitionRequest) returns (milvus.ShowPartitionResponse) {}

    rpc DescribeSegment(milvus.DescribeSegmentRequest) returns (milvus.DescribeSegmentResponse) {}
    rpc ShowSegments(milvus.ShowSegmentRequest) returns (milvus.ShowSegmentResponse) {}

    rpc CreateIndex(milvus.CreateIndexRequest) returns (common.Status) {}
    rpc DescribeIndex(milvus.DescribeIndexRequest) returns (milvus.DescribeIndexResponse) {}
    rpc GetIndexState(milvus.IndexStateRequest) returns (milvus.IndexStateResponse) {}

    rpc AllocTimestamp(TsoRequest) returns (TsoResponse) {}
    rpc AllocID(IDRequest) returns (IDResponse) {}

    // todo move to data service
    rpc AssignSegmentID(data.AssignSegIDRequest) returns (data.AssignSegIDResponse) {}

    rpc GetServiceStates(common.Empty) returns (internal.ServiceStates) {}

    rpc GetTimeTickChannel(common.Empty) returns (milvus.StringResponse) {}

    rpc GetDdChannel(common.Empty) returns (milvus.StringResponse) {}

    rpc GetStatisticsChannel(common.Empty) returns (milvus.StringResponse) {}

}